--- a/src/components/MnemonicaStack/MnemonicaRevealedMode.module.css
+++ b/src/components/MnemonicaStack/MnemonicaRevealedMode.module.css
@@ -96,6 +96,6 @@
 }
 
 .popupCardFrameContainer {
-  width: 300px;
-  height: 420px;
+  width: 280px;
+  height: 400px;
 }
