--- a/src/components/MnemonicaStack/PegsTestMode.module.css
+++ b/src/components/MnemonicaStack/PegsTestMode.module.css
@@ -58,6 +58,6 @@
 }
 
 .popupCardFrameContainer {
-  width: 300px;
-  height: 420px;
+  width: 280px;
+  height: 400px;
 }
